--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -243,12 +243,12 @@
 								               UpdateSourceTrigger=PropertyChanged}" />
 						</Grid>
 
-						<TextBlock 
+						<TextBlock
 							Margin="22 2 0 10"
-							Visibility="{Binding NameFormatOverrideEnabled,
-								                     Converter={StaticResource VisibilityConverter}}"
 							Text="{Binding NameFormat}"
-							TextWrapping="Wrap" />
+							TextWrapping="Wrap"
+							Visibility="{Binding NameFormatOverrideEnabled,
+							                     Converter={StaticResource VisibilityConverter}}" />
 						<CheckBox
 							Height="16"
 							Margin="0 6 0 0"
@@ -751,54 +751,56 @@
 					</StackPanel>
 
 					<!--  Post-encoding  -->
-					<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:PickerRes.PostEncodingSection}" />
-					<StackPanel Style="{StaticResource ConfigSectionStack}">
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="Auto" />
-								<ColumnDefinition />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
-							<CheckBox Content="{x:Static res:PickerRes.SendFileToLabel}" IsChecked="{Binding PostEncodeActionEnabled}" />
+					<StackPanel Orientation="Vertical" Visibility="{Binding IsRunningAsAppx, Source={x:Static vidCoder:XamlStatics.Instance}, Converter={StaticResource InverseVisibilityConverter}}">
+						<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:PickerRes.PostEncodingSection}" />
+						<StackPanel Style="{StaticResource ConfigSectionStack}">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
+								<CheckBox Content="{x:Static res:PickerRes.SendFileToLabel}" IsChecked="{Binding PostEncodeActionEnabled}" />
 
-							<TextBox
-								Grid.Column="1"
-								Height="22"
-								Margin="5 0 0 0"
-								VerticalAlignment="Center"
-								VerticalContentAlignment="Center"
-								IsEnabled="{Binding PostEncodeActionEnabled}"
-								Text="{Binding PostEncodeExecutable,
-								               Mode=TwoWay,
-								               UpdateSourceTrigger=PropertyChanged}" />
+								<TextBox
+									Grid.Column="1"
+									Height="22"
+									Margin="5 0 0 0"
+									VerticalAlignment="Center"
+									VerticalContentAlignment="Center"
+									IsEnabled="{Binding PostEncodeActionEnabled}"
+									Text="{Binding PostEncodeExecutable,
+									               Mode=TwoWay,
+									               UpdateSourceTrigger=PropertyChanged}" />
 
-							<Button
-								Grid.Column="2"
-								Margin="10 0 0 0"
-								Padding="10 0"
-								Command="{Binding PickPostEncodeExecutable}"
-								Content="{x:Static res:CommonRes.Browse}"
-								IsEnabled="{Binding PostEncodeActionEnabled}" />
-						</Grid>
-						<Grid Margin="20 6 0 0" ToolTip="{x:Static res:PickerRes.PostEncodeArgumentsToolTip}">
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="Auto" />
-								<ColumnDefinition />
-							</Grid.ColumnDefinitions>
+								<Button
+									Grid.Column="2"
+									Margin="10 0 0 0"
+									Padding="10 0"
+									Command="{Binding PickPostEncodeExecutable}"
+									Content="{x:Static res:CommonRes.Browse}"
+									IsEnabled="{Binding PostEncodeActionEnabled}" />
+							</Grid>
+							<Grid Margin="20 6 0 0" ToolTip="{x:Static res:PickerRes.PostEncodeArgumentsToolTip}">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition />
+								</Grid.ColumnDefinitions>
 
-							<TextBlock Text="{x:Static res:PickerRes.PostEncodeArgumentsLabel}" />
+								<TextBlock Text="{x:Static res:PickerRes.PostEncodeArgumentsLabel}" />
 
-							<TextBox
-								Grid.Column="1"
-								Height="22"
-								Margin="5 0 0 0"
-								VerticalAlignment="Center"
-								VerticalContentAlignment="Center"
-								IsEnabled="{Binding PostEncodeActionEnabled}"
-								Text="{Binding PostEncodeArguments,
-								               Mode=TwoWay,
-								               UpdateSourceTrigger=PropertyChanged}" />
-						</Grid>
+								<TextBox
+									Grid.Column="1"
+									Height="22"
+									Margin="5 0 0 0"
+									VerticalAlignment="Center"
+									VerticalContentAlignment="Center"
+									IsEnabled="{Binding PostEncodeActionEnabled}"
+									Text="{Binding PostEncodeArguments,
+									               Mode=TwoWay,
+									               UpdateSourceTrigger=PropertyChanged}" />
+							</Grid>
+						</StackPanel>
 					</StackPanel>
 				</StackPanel>
 			</ScrollViewer>
