--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -48,6 +48,12 @@
 			<Setter Property="Margin" Value="4 2 4 2" />
 			<Setter Property="FontWeight" Value="Bold" />
 		</Style>
+		<Style x:Key="MenuSeparatorStyle" TargetType="Rectangle">
+			<Setter Property="Height" Value="1" />
+			<Setter Property="Fill" Value="#CCCCCC" />
+			<Setter Property="HorizontalAlignment" Value="Stretch" />
+			<Setter Property="Margin" Value="30 3 0 3" />
+		</Style>
 		<Style x:Key="SourceDescription" TargetType="controls:PathTextBlock">
 			<Style.Triggers>
 				<DataTrigger Binding="{Binding VideoSourceState}" Value="{x:Static model:VideoSourceState.Scanning}">
@@ -321,57 +327,6 @@
 			Visibility="{Binding ShowTrayIcon,
 			                     Converter={StaticResource VisibilityConverter}}" />
 		<Menu Grid.Row="0" Height="22">
-			<MenuItem Header="{x:Static res:MainRes.FileMenu}">
-				<MenuItem
-					Command="{Binding OpenFile}"
-					Header="{x:Static res:MainRes.OpenVideoFile}"
-					InputGestureText="Ctrl+O">
-					<MenuItem.Icon>
-						<Image
-							Width="16"
-							Height="16"
-							Source="/Icons/video-file.png" />
-					</MenuItem.Icon>
-				</MenuItem>
-				<MenuItem
-					Command="{Binding OpenFolder}"
-					Header="{x:Static res:MainRes.OpenDiscFolder}"
-					InputGestureText="Ctrl+F">
-					<MenuItem.Icon>
-						<Image
-							Width="16"
-							Height="16"
-							Source="/Icons/dvd_folder.png" />
-					</MenuItem.Icon>
-				</MenuItem>
-				<MenuItem Command="{Binding OpenFolder}" Header="{x:Static res:MainRes.EnqueueFolderOfVideoFiles}">
-					<MenuItem.Icon>
-						<Image
-							Width="16"
-							Height="16"
-							Source="/Icons/video_files_folder.png" />
-					</MenuItem.Icon>
-				</MenuItem>
-				<MenuItem
-					Command="{Binding ProcessingService.QueueFiles}"
-					Header="{x:Static res:MainRes.EnqueueMultipleFiles}"
-					InputGestureText="Ctrl+Shift+O" />
-				<MenuItem
-					Command="{Binding ProcessingService.QueueTitlesAction}"
-					Header="{x:Static res:MainRes.EnqueueMultipleTitles}"
-					InputGestureText="Ctrl+T"
-					Visibility="{Binding ProcessingService.CanTryEnqueueMultipleTitles,
-					                     Converter={StaticResource VisibilityConverter}}" />
-				<MenuItem
-					Command="{Binding CloseVideoSource}"
-					Header="{x:Static res:MainRes.CloseVideoSourceMenuItem}"
-					InputGestureText="Ctrl+W" />
-				<Separator />
-				<MenuItem
-					Command="{Binding Exit}"
-					Header="{x:Static res:MainRes.ExitMenuItem}"
-					InputGestureText="Alt+F4" />
-			</MenuItem>
 			<MenuItem Name="toolsMenu" Header="{x:Static res:MainRes.ToolsMenu}">
 				<MenuItem Command="{Binding ImportPreset}" Header="{x:Static res:MainRes.ImportPreset}" />
 				<MenuItem Command="{Binding ExportPreset}" Header="{x:Static res:MainRes.ExportPreset}" />
@@ -387,7 +342,6 @@
 					Header="{x:Static res:MainRes.OptionsMenuItem}"
 					InputGestureText="F4" />
 			</MenuItem>
-			<MenuItem Name="windowsMenu" Header="{x:Static res:MainRes.WindowsMenu}" />
 			<MenuItem Header="{x:Static res:MainRes.HelpMenu}">
 				<MenuItem Command="{Binding OpenHomepage}" Header="{x:Static res:MainRes.VidCoderHomepageMenuItem}">
 					<MenuItem.Icon>
@@ -424,7 +378,7 @@
 			IsQuickAccessToolBarVisible="False">
 			<fluent:RibbonTabItem Header="Generic tab header">
 				<fluent:RibbonGroupBox>
-					<fluent:DropDownButton Header="{x:Static res:MainRes.OpenSourceRibbonButton}" LargeIcon="/Icons/Disc64.png">
+					<fluent:DropDownButton Header="{x:Static res:MainRes.OpenSourceRibbonButton}" LargeIcon="/Icons/Disc64.png" x:Name="openSourceButton">
 						<fluent:MenuItem
 							Command="{Binding OpenFile}"
 							Header="{x:Static res:MainRes.OpenVideoFile}"
@@ -435,6 +389,7 @@
 							Header="{x:Static res:MainRes.OpenDiscFolder}"
 							Icon="/Icons/dvd_folder.png"
 							InputGestureText="Ctrl+F" />
+						<Rectangle Style="{StaticResource MenuSeparatorStyle}" />
 						<fluent:MenuItem
 							Command="{Binding OpenFolder}"
 							Header="{x:Static res:MainRes.EnqueueFolderOfVideoFiles}"
@@ -443,12 +398,6 @@
 							Command="{Binding ProcessingService.QueueFiles}"
 							Header="{x:Static res:MainRes.EnqueueMultipleFiles}"
 							InputGestureText="Ctrl+Shift+O" />
-						<fluent:MenuItem
-							Command="{Binding ProcessingService.QueueTitlesAction}"
-							Header="{x:Static res:MainRes.EnqueueMultipleTitles}"
-							InputGestureText="Ctrl+T"
-							Visibility="{Binding ProcessingService.CanTryEnqueueMultipleTitles,
-							                     Converter={StaticResource VisibilityConverter}}" />
 					</fluent:DropDownButton>
 				</fluent:RibbonGroupBox>
 				<fluent:RibbonGroupBox Header="{x:Static res:MainRes.RibbonEncodingGroupLabel}">
@@ -460,7 +409,10 @@
 						Visibility="{Binding ProcessingService.CanTryEnqueueMultipleTitles,
 						                     Converter={StaticResource VisibilityConverter}}">
 						<fluent:MenuItem Command="{Binding ProcessingService.AddToQueue}" Header="{x:Static res:MainRes.AddToQueueLabel}" />
-						<fluent:MenuItem Command="{Binding ProcessingService.QueueTitlesAction}" Header="{x:Static res:MainRes.AddMultipleTitlesToQueueLabel}" />
+						<fluent:MenuItem
+							Command="{Binding ProcessingService.QueueTitlesAction}"
+							Header="{x:Static res:MainRes.AddMultipleTitlesToQueueLabel}"
+							InputGestureText="Ctrl+T" />
 					</fluent:SplitButton>
 					<fluent:Button
 						Command="{Binding ProcessingService.AddToQueue}"
